# Ejercicios-STL

./: CMakeLists.txt  Ciencia.cpp  Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio4.cpp  Ejercicio5.cpp  Hexagono.cpp  README.md  Trapecio.cpp  Triangulo.cpp  main.cpp
Complemento Ejercicio2/: Ciruculo.cpp
Declaración de subespacios de nombres/: Ciencia.cpp
Espacio de nombres repartido entre diferentes archivos/: main.cpp
