cmake_minimum_required(VERSION 3.26)
project(Ejercicios_STL)

set(CMAKE_CXX_STANDARD 17)


add_executable(Ejercicio1 "Utilización completa de un espacio de nombres/Ejercicio1.cpp")
add_executable(Ejercicio2 "Espacio de nombres repartido entre diferentes archivos/main.cpp")
add_executable(Ejercicio3 "Relación entre clase y espacio de nombres/circulo.cpp")
add_executable(Ejercicio4 "Declaración de subespacios de nombres/Ciencia.cpp")
add_executable(Ejercicio5 PresentacionSTL.cpp)