cmake_minimum_required(VERSION 3.26)
project(Ejercicios_STL)

set(CMAKE_CXX_STANDARD 17)


add_executable(Ejercicio1 Ejercicio1.cpp)
add_executable(Ejercicio2 Ejercicio2.cpp)
add_executable(Ejercicio4 Ejercicio4.cpp)
add_executable(Ejercicio5 Ejercicio5.cpp)
add_executable(Ejercicio3 Ejercicio3.cpp)